error fixing comments, template binding for like

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
@@ -40,7 +40,7 @@
                         <!--<div class="status-line">{{answer.comments?.length}}</div>-->
                         <div class="status-line">Leidos</div>
                         <a data-toggle="collapse" attr.data-target="#questionComment{{question.id}}" aria-expanded="false" >
-                            3 comments
+                           {{question.comments?.length}} comments
                         </a>
                         <!-- social media icon -->
                         <div class="social-icon">
