--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/search.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/search.css
@@ -159,14 +159,13 @@ a {
 }
 
 .suggestions {
-    max-width: 85%;
+    width:100%;
     position: absolute;
     background-color: white;
     top: 100%;
     border-radius: 10px;
     margin-top: 7px;
     z-index: 5000;
-    min-width: 91%;
 }
 
 .btn-group {
