On select dot color On scrol gap reduced

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/search.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/search.css
@@ -1,14 +1,16 @@
-﻿.input-group-btn{
+﻿.input-group-btn {
     width: auto;
 }
+
 .modal-container {
-        position: fixed;
-        top: 0;
-        left: 0;
-        bottom: 0;
-        right: 0;
-        background-color: rgba(0, 0, 0, 0.5);
-    }
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
 .search-icon {
     background: transparent;
     position: absolute;
@@ -16,9 +18,12 @@
     padding-top: 10px;
     height: 43px;
 }
-.search-footer{
-    color:#235da7;;
+
+.search-footer {
+    color: #235da7;
+    ;
 }
+
 hr, ul {
     margin: 0;
 }
@@ -159,7 +164,7 @@ a {
 }
 
 .suggestions {
-    width:100%;
+    width: 100%;
     position: absolute;
     background-color: white;
     top: 100%;
