--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/banner/carousel.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/banner/carousel.css
@@ -2,44 +2,46 @@
     overflow: hidden;
     width: 100%;
 }
-.indicator{
-    margin-left:3px;
+
+.indicator {
+    margin-left: 3px;
 }
-.indicator:focus{
-    background-color:white;
-}
-.fixed-height {     /*for scrol top*/
-        height: 135px;
-    }
+
+
 .slides {
     list-style: none;
     position: relative;
     width: 400%; /* Number of panes * 100% */
     overflow: hidden; /* Clear floats */
-    
     /* Slide effect Animations*/
     -moz-animation: carousel 10s infinite;
     -webkit-animation: carousel 10s infinite;
     animation: carousel 10s infinite;
 }
 
+/*====Indicator Style======*/
+.active{
+    background-color:white;
+}
+.carousel-indicators {
+    top: 277px;
+}
+
+.fixed-height { /*for scrol top*/
+    height: 90px;
+}
+/*===============*/
+
 ul {
     padding: 0;
     margin-bottom: 0;
 }
-
-/*.slides > li {
-    position: relative;
-    float: left;
-    width: 25%; 
-    transition:1s;
-}*/
 .slide-item {
     position: relative;
     float: left;
     width: 25%; /* 100 / number of panes */
-    transition:1s;
-    left:0;
+    transition: 1s;
+    left: 0;
 }
 
 .carousel img {
@@ -61,29 +63,3 @@ ul {
     font-family: myriadpro-regular;
     text-shadow: 2px 2px 5px black;
 }
-
-/*@keyframes carousel {
-    0% {
-        left: -0%;
-    }
-
-    25% {
-        left: -100%;
-    }
-
-    35% {
-        left: -100%;
-    }
-
-    65% {
-        left: -200%;
-    }
-
-    75% {
-        left: -200%;
-    }
-
-    100% {
-        left: -300%;
-    }
-}*/
