--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/apSearch.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/apSearch.component.html
@@ -1,4 +1,4 @@
-﻿<div [ngClass]="placeBottom" class="z-header" id="search-box" >
+﻿<div [ngClass]="placeBottom" class="z-header" id="search-box" (click)="handleClick($event)">
     <div class="input-group" id="adv-search">
 
         <form (ngSubmit)="submitQuestion()" #questionVM="ngForm" class="form-horizontal" role="form" id="search-panel">
