minor fix.. follow count

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
@@ -49,7 +49,7 @@
                                     <img class="social-image" src="../images/facebooklogo.jpg" />
                                     <img class="social-image" src="../images/twitter.png" />
                                     <img class="social-image" src="../images/icon-external-link.png" />
-
+                                    <h5>Repuestus</h5><span class="counter-box">{{question.viewCount}}+</span>
                                 </div>
                             </div>
                         </div>
