--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.css
@@ -2,6 +2,9 @@
   margin-bottom: 0;
   padding-bottom: 0;
 }
+.social-icon>h5{
+    display:inline;
+}
 .details-container{
     margin-left:5px;
 }
@@ -36,7 +39,6 @@
     padding-top: 2px;
     padding-bottom: 14px;
 }
-
 
 .left-gap {
     border: 1px solid transparent;
@@ -84,6 +86,7 @@ p {
     width: 40px;
     text-align: center;
     color:white;
+    margin-left:2px;
 }
 
 .counter-box:after {
