--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-left-menu/question-left-menu.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-left-menu/question-left-menu.css
@@ -1,6 +1,10 @@
 ﻿.question-title {
     
 }
+.question-title>h3{
+    margin-bottom:-10px;
+    margin-top:0;
+}
 
 .category-list {
     color: #F6912B;
