--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/dashboard.component.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/dashboard.component.css
@@ -1,6 +1,6 @@
 ﻿    .dash-panel {
         margin-top: 130px;
-        font-family: 'Myriad Pro';
+        font-family: 'myriadpro-regular';
     }
 
     .left-panel {
