All dashboard forms changed...using formn bind contact call to service

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/dashboard.component.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/dashboard.component.css
@@ -1,7 +1,4 @@
-﻿    .dash-panel {
-        margin-top: 130px;
-        font-family: 'myriadpro-regular';
-    }
+﻿
 
     .left-panel {
         max-width: 150px;
