--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/editprofile.component.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/editprofile.component.css
@@ -4,3 +4,7 @@
     .heading{
         display:inline;
     }
+        .dash-panel {
+        margin-top: 130px;
+        font-family: 'myriadpro-regular';
+    }
