--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/editprofile.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/editprofile.component.html
@@ -51,7 +51,8 @@
                 <div class="col-md-3 inactive">(&#x2716;)Insight</div>
             </div>
         </div>
-        <form>
+        <router-outlet></router-outlet>
+        <!--<form>
             <div class="info-form">
                 <div class="panel panel-default">
                     <div class="panel-heading">
@@ -67,7 +68,7 @@
                     <button class="btn btn-default menu-button" (click)="Submit()">Submit</button>
                 </div>
             </div>
-        </form>
+        </form>-->
         
     </div>
 </div>
