--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/biography.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/biography.component.html
@@ -1,11 +1,27 @@
-﻿<div class="row">
-    <div class="form-group col-md-7">
-        <label>TAG LINE</label>
-        <input type="text" [(ngModel)]="biography.tagLine" class="form-control profile-form">
+﻿<form>
+    <div class="info-form">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <div class="heading">{{_headerName}}</div>
+                <div class="pull-right heading">Required(*)</div>
+            </div>
+            <div class="panel-body">
+                <div class="row">
+                    <div class="form-group col-md-7">
+                        <label>TAG LINE</label>
+                        <input type="text" [(ngModel)]="biography.tagLine" name="tagLine" class="form-control profile-form">
+                    </div>
+                    <!-- =============== -->
+                    <div class="col-md-7">
+                        <label>ABOUT ME*</label>
+                        <textarea [(ngModel)]="biography.aboutMe" name="aboutMe" rows="3" maxlength="3" class="form-control profile-form"></textarea>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="submit-panel">
+            <button class="btn btn-default menu-button">Cancel</button>
+            <button class="btn btn-default menu-button" (click)="Submit()">Submit</button>
+        </div>
     </div>
-    <!-- =============== -->
-    <div class="col-md-7">
-        <label>ABOUT ME*</label>
-        <textarea [(ngModel)]="biography.aboutMe" rows="3" maxlength="3" class="form-control profile-form"></textarea>
-    </div>
-</div>
+</form>
