--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/experience.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/experience.component.html
@@ -7,48 +7,64 @@
         width:24%;
     }
 </style>
-<div class="row">
-    <div class="form-group col-md-6">
-        <label>EMPLOYER*</label>
-        <input [(ngModel)]="experience.employer" type="text" class="form-control profile-form">
-    </div>
-    <div class="form-group col-md-6">
-        <label>POSITION HELD*</label>
-        <input [(ngModel)]="experience.positionHeld" type="text" class="form-control profile-form">
-    </div>
-    <div class="form-group col-md-6">
-        <label>LOCATION*</label>
-        <input [(ngModel)]="experience.employerLocation" type="text" class="form-control profile-form">
-    </div>
-    <!-- =============== -->
-    <div class="form-group col-md-12">
-        <div class="row">
-            <div class="col-md-6"><label class="mid-label">TIME PERIOD*</label></div>
-            <div class="col-md-1"><input [(ngModel)]="experience.currentlyWorking" type="checkbox" class="form-control profile-form" value=""></div>
-            <div class="col-md-5"><label class="mid-label">CURRENTLY WORK HERE*</label></div>
+<form>
+    <div class="info-form">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <div class="heading">{{_headerName}}</div>
+                <div class="pull-right heading">Required(*)</div>
+            </div>
+            <div class="panel-body">
+                <div class="row">
+                    <div class="form-group col-md-6">
+                        <label>EMPLOYER*</label>
+                        <input [(ngModel)]="experience.employer" name="employer" type="text" class="form-control profile-form">
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label>POSITION HELD*</label>
+                        <input [(ngModel)]="experience.positionHeld" name="positionHeld" type="text" class="form-control profile-form">
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label>LOCATION*</label>
+                        <input [(ngModel)]="experience.employerLocation" name="employerLocation" type="text" class="form-control profile-form">
+                    </div>
+                    <!-- =============== -->
+                    <div class="form-group col-md-12">
+                        <div class="row">
+                            <div class="col-md-6"><label class="mid-label">TIME PERIOD*</label></div>
+                            <div class="col-md-1"><input [(ngModel)]="experience.currentlyWorking"  name="currentlyWorking" type="checkbox" class="form-control profile-form" value=""></div>
+                            <div class="col-md-5"><label class="mid-label">CURRENTLY WORK HERE*</label></div>
+                        </div>
+                    </div>
+                    <div class="form-group col-md-12">
+                        <div class="row">
+                            <div class="col-md-2 date-input">
+                                <input [(ngModel)]="experience.startMonth" name="startMonth" type="number" placeholder="MONTH" class="form-control profile-form">
+                            </div>
+                            <div class="col-md-2 date-input">
+                                <input [(ngModel)]="experience.startYear" name="startYear" type="number" min="1900" max="2099" step="1" value="2016" placeholder="YEAR" class="form-control profile-form">
+                            </div>
+                            <label class="mid-label">TO</label>
+                            <div class="col-md-2 date-input">
+                                <input [(ngModel)]="experience.endMonth" name="endMonth" type="number" placeholder="MONTH" class="form-control profile-form">
+                            </div>
+                            <div class="col-md-2 date-input">
+                                <input [(ngModel)]="experience.endYear" name="endYear" type="number" min="1900" max="2099" step="1" value="2016" placeholder="YEAR" class="form-control profile-form">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group col-md-7"> </div>
+                    <div class="form-group col-md-6">
+                        <label>DESCRIPTION</label>
+                        <textarea rows="3" maxlength="3" [(ngModel)]="experience.description" name="description" class="form-control profile-form"></textarea>
+                    </div>
+                    <div class="form-group col-md-7"> </div>
+                </div>
+            </div>
+        </div>
+        <div class="submit-panel">
+            <button class="btn btn-default menu-button">Cancel</button>
+            <button class="btn btn-default menu-button" (click)="Submit()">Submit</button>
         </div>
     </div>
-    <div class="form-group col-md-12">
-        <div class="row">
-            <div class="col-md-2 date-input">
-                <input [(ngModel)]="experience.startMonth" type="number" placeholder="MONTH" class="form-control profile-form">
-            </div>
-            <div class="col-md-2 date-input">
-                <input [(ngModel)]="experience.startYear" type="number" min="1900" max="2099" step="1" value="2016" placeholder="YEAR" class="form-control profile-form">
-            </div>
-            <label class="mid-label">TO</label>
-            <div class="col-md-2 date-input">
-                <input [(ngModel)]="experience.endMonth" type="number" placeholder="MONTH" class="form-control profile-form">
-            </div>
-            <div class="col-md-2 date-input">
-                <input [(ngModel)]="experience.endYear" type="number" min="1900" max="2099" step="1" value="2016" placeholder="YEAR" class="form-control profile-form">
-            </div>
-        </div>
-    </div>
-    <div class="form-group col-md-7"> </div>
-    <div class="form-group col-md-6">
-        <label>DESCRIPTION</label>
-        <textarea rows="3" maxlength="3" [(ngModel)]="experience.description" class="form-control profile-form"></textarea>
-    </div>
-    <div class="form-group col-md-7"> </div>
-</div>
+</form>
