--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/practice.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/practice.component.html
@@ -33,26 +33,43 @@
         background-color: #f29200;
     }
 </style>
-<div class="row">
-    <div class="row">
-        <div class="point-cointeiner">
-            <div class="col-md-4 ">
-                <div class="skil-points">practice mamangement</div>
+<form>
+    <div class="info-form">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <div class="heading">{{_headerName}}</div>
+                <div class="pull-right heading">Required(*)</div>
             </div>
-            <div class="col-md-4">
-                <div class="skil-points">practice mamangement</div>
-            </div>
-            <div class="col-md-4">
-                <div class="skil-points">practice mamangement</div>
-            </div>
-            <div class="col-md-4">
-                <div class="skil-points">practice mamangement</div>
+            <div class="panel-body">
+                <div class="row">
+                    <div class="row">
+                        <div class="point-cointeiner">
+                            <div class="col-md-4 ">
+                                <div class="skil-points">practice mamangement</div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="skil-points">practice mamangement</div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="skil-points">practice mamangement</div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="skil-points">practice mamangement</div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6 col-lg-offset-3 button-container">
+                        <input type="text" [(ngModel)]="practiceArea.newPracticeArea" name="newPracticeArea" placeholder="ADD PRACTICE AREA" class="form-control profile-form">
+                        <button class="btn btn-default done-btn">DONE</button>
+                    </div>
+                </div>
+
             </div>
         </div>
+        <div class="submit-panel">
+            <button class="btn btn-default menu-button">Cancel</button>
+            <button class="btn btn-default menu-button" (click)="Submit()">Submit</button>
+        </div>
     </div>
-
-    <div class="col-md-6 col-lg-offset-3 button-container">
-        <input type="text" [(ngModel)]="contact.lastName" placeholder="ADD PRACTICE AREA" class="form-control profile-form">
-        <button class="btn btn-default done-btn">DONE</button>
-    </div>
-</div>
+</form>
