--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/skills.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/skills.component.html
@@ -1,7 +1,8 @@
 ﻿<style>
-    .profile-form{
-        text-align:center;
+    .profile-form {
+        text-align: center;
     }
+
     .skil-points {
         background-color: #ededed;
         padding: 5px;
@@ -33,26 +34,43 @@
         background-color: #f29200;
     }
 </style>
-<div class="row">
-    <div class="row">
-        <div class="point-container">
-            <div class="col-md-4 ">
-                <div class="skil-points">quality mamangement</div>
+
+<form>
+    <div class="info-form">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <div class="heading">{{_headerName}}</div>
+                <div class="pull-right heading">Required(*)</div>
             </div>
-            <div class="col-md-4">
-                <div class="skil-points">quality mamangement</div>
-            </div>
-            <div class="col-md-4">
-                <div class="skil-points">quality mamangement</div>
-            </div>
-            <div class="col-md-4">
-                <div class="skil-points">quality mamangement</div>
+            <div class="panel-body">
+                <div class="row">
+                    <div class="row">
+                        <div class="point-container">
+                            <div class="col-md-4 ">
+                                <div class="skil-points">quality mamangement</div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="skil-points">quality mamangement</div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="skil-points">quality mamangement</div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="skil-points">quality mamangement</div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6 col-lg-offset-3 button-container">
+                        <input type="text" [(ngModel)]="skills.newSkill" name="newSkill" placeholder="ADD SKILLS" class="form-control profile-form">
+                        <button class="btn btn-default done-btn">DONE</button>
+                    </div>
+                </div>
             </div>
         </div>
+        <div class="submit-panel">
+            <button class="btn btn-default menu-button">Cancel</button>
+            <button class="btn btn-default menu-button" (click)="Submit()">Submit</button>
+        </div>
     </div>
-
-    <div class="col-md-6 col-lg-offset-3 button-container">
-        <input type="text" [(ngModel)]="contact.lastName" placeholder="ADD SKILLS" class="form-control profile-form">
-        <button class="btn btn-default done-btn">DONE</button>
-    </div>
-</div>
+</form>
