Add configuration for profile and categories

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-details/question-details.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-details/question-details.component.html
@@ -1,10 +1,9 @@
-﻿<!-- =========Questions========== -->
-<h1>&iquest;{{question.title}}?</h1>
+﻿<h1>&iquest;{{question.title}}?</h1>
 <!--<div class="header-info">{{date.getMonthName(question.date.getMonth())}} {{question.date.getFullYear()}}</div>-->
 
 <button class="btn btn-default" data-toggle="modal" data-target="#myModal"><i class="fa fa-pencil"></i>Answer</button>
 
-<!-- ===================== -->
+
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <form #answerVM="ngForm" class="form-horizontal" role="form">
@@ -42,7 +41,6 @@
         </form>
     </div>
 </div>
-<!-- =============== -->
 
 
 <div class="row z-ground">
@@ -143,7 +141,6 @@
                                 <!--<div class="header-info">{{comment?.user?.name}},{{date.getMonthName(comment?.time?.getMonth())}} {{comment?.time?.getDate()}} {{comment?.time?.getFullYear()}}</div>-->
                                 <p class="answer-text">{{comment?.commentText}}</p>
                             </div>
-
                         </div>
                         <hr />
                     </div>
