--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
@@ -1,4 +1,10 @@
 ﻿<div class="loader" *ngIf="loader.isLoading"></div>
+<div class="question-title">
+    <img align="left" class="user-image" src="../../../../profile/avatar.png" />
+    <h2>
+        {{categorySelected}}
+    </h2>
+</div>
 <div     infinite-scroll
          [infiniteScrollDistance]="scrollDistance"
          [infiniteScrollThrottle]="throttle"
@@ -9,9 +15,9 @@
             <img class="image-border" src="../../../../images/border.png" />
         </div>
         <div class="question-contents">
-            <h3><a [routerLink]="['/question/detail',question.id]">&iquest;{{question.title}}?</a> </h3>
+            <h3><a [routerLink]="['/question/detail',question.id]">&iquest;{{question.title}}</a> </h3>
             <div>
-                Categories: <h5 *ngFor="let c of question.categories" class="subtitle">{{c?.category.name}},&nbsp; </h5>
+                Categories: <h5 *ngFor="let c of question.categories; let i = index; let last = last" class="subtitle">{{c?.category.name}} <span *ngIf="!last">,&nbsp;</span> </h5>
             </div>            
             <div class="row ">
 
