--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/practice.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/practice.component.html
@@ -60,7 +60,7 @@
                     </div>
 
                     <div class="col-md-6 col-lg-offset-3 button-container">
-                        <input type="text" [(ngModel)]="practiceArea.newPracticeArea" name="newPracticeArea" placeholder="ADD PRACTICE AREA" class="form-control profile-form">
+                        <input type="text" [(ngModel)]="practiceArea.PracticeAreaName" name="PracticeAreaName" placeholder="ADD PRACTICE AREA" class="form-control profile-form">
                         <button class="btn btn-default done-btn">DONE</button>
                     </div>
                 </div>
