--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/skills.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/skills.component.html
@@ -62,7 +62,7 @@
                     </div>
 
                     <div class="col-md-6 col-lg-offset-3 button-container">
-                        <input type="text" [(ngModel)]="skills.newSkill" name="newSkill" placeholder="ADD SKILLS" class="form-control profile-form">
+                        <input type="text" [(ngModel)]="skills.skillName" name="skillName" placeholder="ADD SKILLS" class="form-control profile-form">
                         <button class="btn btn-default done-btn">DONE</button>
                     </div>
                 </div>
