--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/dashtab/dashtab.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/dashtab/dashtab.component.html
@@ -1,5 +1,5 @@
 ﻿
-<div class="tab-bar">
+<div class="tab-bar z-header">
     <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-tab">
             <li class="nav-home"><a routerLink="/">View Rrofile</a></li>
