--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/contact.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/contact.component.html
@@ -9,7 +9,7 @@
                 <div class="row">
                     <div class="form-group col-md-6">
                         <label>FIRST NAME*</label>
-                        <input type="text" [(ngModel)]="contact.firstName" name="firstName" class="form-control profile-form">
+                        <input type="text" [(ngModel)]="contact.firstName" name="FirstName" class="form-control profile-form">
                     </div>
                     <div class="col-md-6">
                         <label>LAST NAME*</label>
@@ -18,20 +18,20 @@
                     <!-- ==================== -->
                     <div class="form-group col-md-6">
                         <label>PREFERED E-MAIL*</label>
-                        <input type="email" placeholder="Enter your email" name="email" [(ngModel)]="contact.email" class="form-control profile-form">
+                        <input type="email" placeholder="Enter your email" name="email" [(ngModel)]="contact.prefferedEmail" class="form-control profile-form">
                     </div>
                     <div class="col-md-6">
                         <label>PHONE NUMBR</label>
-                        <input type="tel" [(ngModel)]="contact.phone" name="phone" class="form-control profile-form">
+                        <input type="tel" [(ngModel)]="contact.phoneNumber" name="phoneNumber" class="form-control profile-form">
                     </div>
                     <!-- ==================== -->
                     <div class="form-group col-md-6">
                         <label>ADDRESS LINE 1*</label>
-                        <input type="text" [(ngModel)]="contact.address1" name="address1" class="form-control profile-form">
+                        <input type="text" [(ngModel)]="contact.addressLine1" name="addressLine1" class="form-control profile-form">
                     </div>
                     <div class="col-md-6">
                         <label>ADDRESS LINE 2</label>
-                        <input type="text" [(ngModel)]="contact.address2" name="address2" class="form-control profile-form">
+                        <input type="text" [(ngModel)]="contact.addressLine2" name="addressLine2" class="form-control profile-form">
                     </div>
                     <!-- ==================== -->
                     <div class="form-group col-md-6">
