--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/education.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/eidtprofile/profilesforms/education.component.html
@@ -34,7 +34,7 @@
                     <div class="form-group col-md-6">
                         <div class="row">
                             <div class="col-md-6"><label class="mid-label">COMPLETED STUDIES*</label></div>
-                            <div class="col-md-2"><input [(ngModel)]="education.studyStatus" name="studyStatus" type="checkbox" class="form-control profile-form" value=""></div>
+                            <div class="col-md-2"><input [(ngModel)]="education.CompletedStudies" name="CompletedStudies" type="checkbox" class="form-control profile-form" value=""></div>
                         </div>
 
                     </div>
