--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Questions/Views/SaveCategory/Index.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Questions/Views/SaveCategory/Index.cshtml
@@ -4,23 +4,25 @@
 @{
 }
 
-@using (Html.BeginForm("FileUpload", "SaveCategory", FormMethod.Post,
-                                                                 new { area = "Questions", enctype = "multipart/form-data" }))
-{
-    <p>
-        <label for="cname">Name (required, at least 2 characters)</label>
-        <input id="cname" name="name" minlength="2" type="text" required>
-    </p>
-    <p>
-        <label for="description">description</label>
-        <input id="description" name="description" minlength="2" type="text" required>
-    </p>
-    <label for="field">Required, only .xls and .csv files allowed: </label>
-    <input type="file" class="left" id="file" name="file" accept=".jpg">
-    <br />
-    <input type="submit" value="Upload">
+@*@using (Html.BeginForm("FileUpload", "SaveCategory", FormMethod.Post,
+                                                                     new { area = "Questions", enctype = "multipart/form-data" }))
+    {
+        <p>
+            <label for="cname">Name (required, at least 2 characters)</label>
+            <input id="cname" name="name" minlength="2" type="text" required>
+        </p>
+        <p>
+            <label for="description">description</label>
+            <input id="description" name="description" minlength="2" type="text" required>
+        </p>
+        <label for="field">Required, only .xls and .csv files allowed: </label>
+        <input type="file" class="left" id="file" name="file" accept=".jpg">
+        <br />
+        <input type="submit" value="Upload">
 
-}
+    }*@
+
+
 @*@using (Html.BeginForm(new { area = "security", controller = "account", action = "logon", method = FormMethod.Post, enctype = "multipart/form-data" }))
         {
             <input type="submit" value="Upload">
@@ -37,3 +39,101 @@
         <input type="submit" value="Validate!">
     </form>
 *@
+<style>
+
+</style>
+<div class="row">
+    <div class="col-md-4">
+        .
+    </div>
+    <div class="col-md-4">
+        <img class="left-border" src="~/images/border.png" />
+
+        <section>
+
+            <form asp-controller="Account" asp-action="Login" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal" role="form">
+                <h2>Add Category</h2>
+                <div class="form-group">
+                    <div class="col-sm-offset-1 col-md-10">
+                        <input type="text" id="Name" placeholder="Name" class="form-control" minlength="2" required />
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-sm-offset-1 col-md-10">
+                        <input type="text" id="description" placeholder="description" class="form-control" minlength="2" required />
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-sm-offset-1 col-md-10">
+                        <input type="file" id="file" placeholder="file" class="form-control-file" minlength="2" accept=".jpg" />
+                    </div>
+                </div>
+                <br />
+                <div class="form-group">
+                    <div class="col-sm-offset-1 col-md-10">
+                        <input type="submit" value="Save" class="btn btn-default">
+                    </div>
+                </div>
+                
+            </form>
+        </section>
+    </div>
+    <div class="col-md-3">
+
+    </div>
+
+        
+</div>
+<div class="row">
+    <div class="col-lg-12">
+        <div class="panel-body">
+            <div class="table-responsive">
+                <table class="table table-hover table-striped table-bordered">
+                    <thead>
+                        <tr>
+                            <th>
+                                A
+                            </th>
+                            <th>
+                                B
+                            </th>
+                            <th>
+
+                               Action
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>
+                                1
+                            </td>
+                            <td>
+                                2
+                            </td>
+                            <td>
+                                <div class="row">
+                                    <div class="col-xs-2">
+                                        <button id="btnApprove" type="button" class="btn btn-collapse">
+                                            <span class="glyphicon glyphicon-ok"></span> Approve
+                                        </button>
+                                    </div>
+                                    <div class="col-xs-2">
+                                        <button id="btnDecline" type="button" class="btn btn-danger">
+                                            <span class="glyphicon glyphicon-trash"></span> Decline
+                                        </button>
+                                    </div>
+                                </div>
+                                
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
+
+@*@section Scripts {
+        @{ Html.RenderPartial("~/Views/Shared/_ValidationScriptsPartial"); }
+    }*@
