Soem cahnges of SaveCategory COntroller

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Shared/_AdminLayout.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Shared/_AdminLayout.cshtml
@@ -93,7 +93,7 @@
             float: left;
             width: 61px;
             height: auto;
-            background: url('../logo cuadrado.png');
+            /*background: url('../logo cuadrado.png');*/
         }
         /*=============Log in  CSS*/
         h2 {
@@ -114,7 +114,7 @@
         }
 
         .left-border {
-            background-image: url('../border.png');
+            /*background-image: url('../border.png');*/
             width: 4px;
             margin-top: 70px;
             position: absolute;
